# goobits-cli

./: .git-filter-patterns  .gitignore  .gitleaks.toml  .vulture_whitelist.py  ADVANCED_INTERACTIVE_DATA_STRUCTURES.md  AGENTS.md  AGENT_D_INTEGRATION_REPORT.md  AGENT_F_PERFORMANCE_OVERHAUL_REPORT.md  AGENT_F_REPORT.md  API_SPECS.md  ARCHIVED_PROPOSALS_NOTE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLIPPY_FIXES_SUMMARY.md  CODEMAP.md  CONSOLIDATION_TEST_RESULTS.md  CONTRIBUTING.md  Cargo.toml  DEEP_ANALYSIS_NESTED_COMMANDS.md  DOC_ACCURACY_REPORT.md  FILE_CONSOLIDATION_SUMMARY.md  FINAL_ANALYSIS.md  FINAL_CLEANUP_REPORT.md  FINAL_CLEANUP_SUMMARY.md  GIT_FILTER_REPO_PLAN.md  LICENSE  Makefile  NESTED_IMPLEMENTATION_ESTIMATE.md  NODEJS_ANALYSIS_REPORT.md  PERFORMANCE_VALIDATION_REPORT.md  PHASE1_LOGGING_EXTRACTION_RESULTS.md  PHASE_2_INTEGRATION_REPORT.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4C_IMPLEMENTATION_REPORT.md  PHASE_4D_COMPLETION_REPORT.md  PHASE_4E_COMPLETION_SUMMARY.md  PHASE_4E_INTEGRATION_REPORT.md  PHASE_4E_PERFORMANCE_REPORT.md  (+204 more)
examples/: .gitignore  Cargo.toml  README.md  cli.js  index.js  nested-command-demo.yaml  package.json  postinstall.js  setup.sh
examples/advanced-features/: Cargo.toml  README.md  cli.cjs  cli.ts  completion.ts  completion_engine.js  config.js  config.ts  errors.js  errors.ts  hooks.cjs  hooks.ts  hooks_template.py  index.ts  interactive_mode.ts  nested-command-demo.yaml  package.json  pyproject.toml  setup.sh  tsconfig.json
examples/advanced-features/completions/: _demo  demo-completion.bash  demo.fish
examples/advanced-features/lib/: completion.js  completion.ts  config.js  config.ts  errors.js  errors.ts  formatter.js  progress.js  progress.ts  prompts.ts
examples/advanced-features/src/: cli.rs  completion.rs  config.rs  errors.rs  hooks.rs  hooks.ts  lib.rs  main.rs
examples/advanced-features/src/nested_demo/: __init__.py  cli.py  interactive.py  logger.py
examples/basic-demos/: .eslintrc.json  Cargo.toml  README.md  app_hooks.js  app_hooks.py  cli.d.ts  cli.js  cli.mjs  cli.ts  cli_hooks.mjs  cli_types.d.ts  completion.ts  completion_engine.js  demo_js_interactive.js  demo_ts_interactive.ts  enhanced_interactive_mode.js  errors.js  errors.ts  esbuild.config.js  generated_index.ts  hooks.js  hooks.rs  hooks.ts  index.js  index.ts  interactive_mode.ts  minimal-python-example.yaml  nodejs-example.yaml  package.json  pyproject.toml  python-example.yaml  rollup.config.js  rust-complex-example.yaml  rust-example.yaml  rust-simple-example.yaml  setup.sh  tsconfig.build.json  typescript-example.yaml  webpack.config.js
examples/basic-demos/commands/builtin/: completion.js  daemon.js  format-demo.js  plugin.js  upgrade.js
examples/basic-demos/completions/: _demo_js  _demo_rust  _demo_ts  demo_js-completion.bash  demo_js.fish  demo_rust-completion.bash  demo_rust.fish  demo_ts-completion.bash  demo_ts.fish
examples/basic-demos/demo_python_cli/: cli_hooks.py
examples/basic-demos/lib/: completion.js  config.js  config.ts  daemon.ts  decorators.ts  errors.js  formatter.js  logger.js  logger.ts  progress.js  progress.ts  prompts.js  prompts.ts
examples/basic-demos/minimal_python_cli/: cli.py  cli_hooks.py
examples/basic-demos/nodejs/: cli_hooks.mjs  setup.sh
examples/basic-demos/nodejs/src/demo_cli/: cli.mjs
examples/basic-demos/python/demo_multi_cli/: cli_hooks.py
examples/basic-demos/rust/: Cargo.toml  setup.sh
examples/basic-demos/rust/src/: cli_hooks.rs
examples/basic-demos/rust/src/demo_cli/: cli.rs
examples/basic-demos/scripts/: postinstall.js
examples/basic-demos/src/: cli.rs  cli_hooks.rs  completion.rs  config.rs  demo_rust_complex_interactive.rs  demo_rust_interactive.rs  demo_rust_simple_interactive.rs  hooks.js  hooks.rs  hooks.ts  lib.rs  logger.rs  main.rs
examples/basic-demos/src/demo_cli/: cli.js  cli.py  setup.sh
examples/basic-demos/src/demo_python_cli/: __init__.py  app_hooks.py  interactive.py  logger.py
examples/basic-demos/src/minimal_python_cli/: __init__.py  cli.py  interactive.py  logger.py
examples/basic-demos/test/: cli.test.ts  setup.ts
examples/basic-demos/types/: cli.d.ts  config.d.ts  decorators.d.ts  errors.d.ts  plugins.d.ts  validators.d.ts
examples/basic-demos/typescript/: cli_hooks.ts  cli_types.d.ts  setup.sh
examples/completions/: _demo  demo-completion.bash  demo.fish
examples/lib/: plugin-manager.js  prompts.js
examples/src/: cli.rs  hooks.js  hooks.rs  main.rs
examples/src/nested_demo/: __init__.py  cli.py
examples/test-ts/: README.md  cli.d.ts  cli.ts  completion.ts  config.ts  errors.ts  goobits.yaml  hooks.ts  index.ts  interactive_mode.ts  jest.config.js  logger.ts  package.json  postinstall.js  setup.sh
examples/test-ts/completions/: _testts  testts-completion.bash  testts.fish
examples/test-ts/lib/: completion.ts  config.ts  decorators.ts  errors.ts  progress.ts  prompts.ts
examples/test-ts/src/: hooks.ts
test-fixtures/configs/rust/: Cargo.toml  README.md  setup.sh
test-fixtures/configs/rust/src/: cli.rs  completion.rs  config.rs  errors.rs  hooks.rs  lib.rs  logger.rs  main.rs  testrust_interactive.rs
test-output/rust/: Cargo.toml  setup.sh
test-output/rust/src/: cli.rs  cli_hooks.rs
test-rust-out/: Cargo.toml  README.md  setup.sh
test-rust-out/completions/: _testrust  testrust-completion.bash  testrust.fish
test-rust-out/src/: hooks.rs  main.rs
test_python_hooks_verification/: pyproject.toml  test.yaml
test_python_hooks_verification/src/test_python_hooks/: __init__.py  cli.py  interactive.py  logger.py  setup.sh
test_spacing/: Cargo.toml  nodejs_test.yaml  python_test.yaml  rust_test.yaml  setup.sh  test_spacing_config.yaml  typescript_test.yaml
test_spacing/nodejs_cli/: cli.mjs  cli_hooks.mjs
test_spacing/nodejs_cli_old/: package.json
test_spacing/python_cli_old/: setup.sh
test_spacing/python_cli_old/spacing_test_cli/: cli.py
test_spacing/spacing_test_cli/: cli.py  cli_hooks.py
test_spacing/src/: cli.rs  cli_hooks.rs
test_spacing/typescript_cli/: cli.ts  cli_hooks.ts  cli_types.d.ts
(+1235 files in other folders)
