[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "goobits-cli"
version = "3.0.1"
description = "Multi-language CLI generator from YAML configuration"
readme = "README.md"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: System :: Systems Administration", "Topic :: Utilities",]
requires-python = ">=3.8"
dependencies = [ "click>=8.0.0", "rich-click>=1.6.0", "rich>=12.0.0", "typer>=0.9.0", "psutil>=5.8.0", "pyyaml>=6.0", "jinja2>=3.0.0", "pydantic>=2.0.0",]
[[project.authors]]
name = "Unknown Author"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0", "black>=22.0.0", "flake8>=6.0.0", "mypy>=1.0.0", "vulture>=2.7",]
test = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0",]
async = [ "aiohttp>=3.8.0", "aiofiles>=0.8.0",]
all = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0", "black>=22.0.0", "flake8>=6.0.0", "mypy>=1.0.0", "vulture>=2.7", "aiohttp>=3.8.0", "aiofiles>=0.8.0",]

[project.urls]

[project.scripts]
goobits = "goobits_cli.main:run_app"

[tool.black]
line-length = 88
target-version = [ "py38",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.setuptools.package-data]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [ "src/tests",]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: marks tests with timeout requirements",
    "asyncio: marks tests as asynchronous",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.setuptools.packages.find]
where = [ "src",]
