[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "goobits-cli"
version = "3.0.1"
description = "Multi-language CLI generator from YAML configuration"
readme = "README.md"
keywords = []
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: System :: Systems Administration", "Topic :: Utilities",]
requires-python = ">=3.8"
dependencies = [ "click>=8.0.0", "rich-click>=1.6.0", "rich>=12.0.0", "typer>=0.9.0", "psutil>=5.8.0", "pyyaml>=6.0", "jinja2>=3.0.0", "pydantic>=2.0.0", "toml>=0.10.0",]
[[project.authors]]
name = "Unknown Author"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.0.0", "vulture>=2.7", "types-PyYAML>=6.0.0", "types-toml>=0.10.0",]
test = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0",]
async = [ "aiohttp>=3.8.0", "aiofiles>=0.8.0",]
all = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.0.0", "vulture>=2.7", "aiohttp>=3.8.0", "aiofiles>=0.8.0",]

[project.urls]

[project.scripts]
goobits = "goobits_cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]
cache-dir = ".artifacts/cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # Line length handled by formatter
    "E402",  # Module level import not at top (intentional for circular imports)
    "E712",  # Comparison to True/False (common with config values)
    "B007",  # Loop control variable not used (intentional in many cases)
    "B008",  # Function calls in argument defaults (typer pattern)
    "B011",  # assert False (used intentionally in tests)
    "B904",  # Exception chaining (would require significant refactor)
    "B039",  # Mutable ContextVar defaults (intentional pattern)
    "B017",  # Do not assert blind exception (acceptable in tests)
    "C401",  # Generator vs comprehension (style preference)
    "F401",  # Unused imports (sometimes for re-export or type hints)
    "F403",  # Star imports (used for hook imports by design)
    "F405",  # Undefined names from star imports (same reason)
    "F841",  # Unused variables (common in tests and side-effect code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = [ "S101",]

[tool.ruff.lint.isort]
known-first-party = ["goobits_cli"]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
cache_dir = ".artifacts/cache/mypy"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_reexport = true
namespace_packages = true
explicit_package_bases = true
exclude = "(^|/)feature-parity/"

[[tool.mypy.overrides]]
module = "goobits_cli.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.setuptools.package-data]
test_cli = [ "setup.sh",]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["src/tests"]
cache_dir = ".artifacts/cache/pytest"
required_plugins = ["pytest-timeout"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300
markers = [
    "slow: marks tests as slow running",
    "heavy: marks tests that require external toolchains/network and are expensive",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "timeout: marks tests with timeout requirements",
    "asyncio: marks tests as asynchronous",
    "acceptance: marks acceptance tests for generation verification",
    "performance: marks performance benchmark tests",
    "ir: marks intermediate representation tests",
    "downstream: marks downstream project validation tests",
]

[tool.coverage.run]
data_file = ".artifacts/cache/.coverage"

[tool.coverage.html]
directory = ".artifacts/cache/htmlcov"

[tool.setuptools.packages.find]
where = [ "src",]
