[package]
name = "test-rust-cli"
version = "1.2.3"
description = "A test CLI for Rust generation"
authors = [""]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = ""
homepage = ""
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "testrust"
path = "src/main.rs"

[dependencies]
# Default dependencies (may be overridden by rust_crates)
clap = { version = "4.4", features = ["derive", "color", "suggestions", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"], optional = true }
dirs = "5.0"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
indicatif = "0.17"
tabled = "0.15"
libloading = "0.8"
once_cell = "1.19"
dialoguer = { version = "0.11", features = ["fuzzy-select", "completion"] }
rustyline = "13.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[features]
default = []
async = ["tokio"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true