[[bin]]
name = "spacingtest"
path = "src/main.rs"

[package]
name = "spacing-test-cli"
version = "1.0.0"
edition = "2021"
authors = [ "Unknown Author <unknown@example.com>",]
description = "Test CLI for enhanced spacing verification"
license = "MIT"
documentation = "https://docs.rs/spacing-test-cli"
readme = "README.md"
exclude = [ ".gitignore", "Cargo.lock",]

[dependencies]
clap_complete = "4.4"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

[features]
default = []
progress = [ "indicatif",]
full = [ "indicatif",]
dev = [ "indicatif",]

[dependencies.clap]
version = "4.4"
features = [ "derive", "color",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.indicatif]
version = "0.17"
optional = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
