
[package]
name = "test-multi-cli"
version = "1.0.0"
edition = "2021"
authors = ["Unknown Author <unknown@example.com>"]
description = "Testing multi-language generation"
license = "MIT"
documentation = "https://docs.rs/test-multi-cli"
readme = "README.md"
exclude = [
    ".gitignore",
    "Cargo.lock",
]

[[bin]]
name = "testmulti"
path = "src/cli.rs"


[dependencies]
# Core dependencies - always included
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"
anyhow = "1.0"
thiserror = "1.0"

# Serde dependencies - always included because Universal Template System generates code that uses them
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time/date handling - always included because logger uses it
chrono = { version = "0.4", features = ["serde"] }

# Essential dependencies always used by generated code
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

# Conditional dependencies based on detected features
# Note: chrono is now included in core dependencies above

# Optional dependencies for advanced features

indicatif = { version = "0.17", optional = true }
[features]
# Feature flags based on detected CLI requirements
default = []

# Granular feature sets
progress = ["indicatif"]
# Convenience feature combinations
full = ['indicatif']
# Development features
dev = ['indicatif']
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0